editing the view

--- a/index.html
+++ b/index.html
@@ -114,17 +114,17 @@
     <!-- About  -->
     <div class="container">
       <div class="row">
-        <div class="col-12 col-lg-6">
+        <div class="col-12 col-lg-6 ml-5">
           <img
             data-aos="zoom-out-right"
-            class="about__img"
+            class="about__img ml-5"
             src="../images/photo_2023-04-29_07-42-42.jpg"
             alt=""
           />
         </div>
-        <div data-aos="zoom-out-right" class="col-12 col-lg-6">
-          <h1 id="about">About</h1>
-          <p class="about__description">
+        <div data-aos="zoom-out-right" class="col-lg-6 ml-5">
+          <h1 class="mt-5" id="about">About</h1>
+          <p class="about__description mt-3">
             Ziyad is a Computer and control engineer in KFS university in Egypt
             He uses Html , css , Javascript , Bootstrap , Angular for fronted
             development and also use NodeJs , Express , MongoDB as a backend
@@ -134,8 +134,10 @@
     </div>
     <!-- Portfolio Section -->
     <div class="container">
-      <h1 data-aos="slide-up" id="portfolio" class="portfolio">Portfolio</h1>
-      <div class="row">
+      <h1 data-aos="slide-up" id="portfolio" class="portfolio ml-5">
+        Portfolio
+      </h1>
+      <div class="row ml-5">
         <div data-aos="flip-down" class="col-12 col-lg-4">
           <div class="card mb-5" style="width: 18rem">
             <img
@@ -185,7 +187,7 @@
     <!-- Contact Section -->
     <div class="container">
       <div class="row">
-        <div data-aos="fade-right" class="col-12 col-md-4">
+        <div data-aos="fade-right" class="col-12 col-md-4 ml-5">
           <h1 id="contact-me">Contact Me</h1>
           <div class="social-media">
             <ul class="contact__list">
@@ -220,7 +222,7 @@
           </div>
         </div>
 
-        <div class="col-12 col-md-8">
+        <div class="col-12 col-md-8 ml-5">
           <form data-aos="fade-left">
             <div class="form-group">
               <label for="exampleInputEmail1">Email address</label>
