--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     <!-- About  -->
     <div class="container">
       <div class="row">
-        <div class="col-12 col-lg-6 ml-5">
+        <div class="col-12 col-lg-6">
           <img
             data-aos="zoom-out-right"
             class="about__img ml-5"
@@ -122,7 +122,10 @@
             alt=""
           />
         </div>
-        <div data-aos="zoom-out-right" class="col-lg-6 ml-5">
+        <div
+          data-aos="zoom-out-right"
+          class="col-lg-6 col-sm-12 text-center text-sm-left"
+        >
           <h1 class="mt-5" id="about">About</h1>
           <p class="about__description mt-3">
             Ziyad is a Computer and control engineer in KFS university in Egypt
@@ -133,10 +136,8 @@
       </div>
     </div>
     <!-- Portfolio Section -->
-    <div class="container">
-      <h1 data-aos="slide-up" id="portfolio" class="portfolio ml-5">
-        Portfolio
-      </h1>
+    <div class="container col-sm-12 text-center text-sm-left">
+      <h1 data-aos="slide-up" id="portfolio" class="portfolio">Portfolio</h1>
       <div class="row ml-5">
         <div data-aos="flip-down" class="col-12 col-lg-4">
           <div class="card mb-5" style="width: 18rem">
