final media query changes in portfolio heading

--- a/index.html
+++ b/index.html
@@ -136,8 +136,14 @@
       </div>
     </div>
     <!-- Portfolio Section -->
-    <div class="container col-sm-12 text-center text-sm-left">
-      <h1 data-aos="slide-up" id="portfolio" class="portfolio">Portfolio</h1>
+    <div class="container">
+      <h1
+        data-aos="slide-up"
+        id="portfolio"
+        class="portfolio col-sm-12 text-center text-sm-left col-lg-12 text-lg-center"
+      >
+        Portfolio
+      </h1>
       <div class="row ml-5">
         <div data-aos="flip-down" class="col-12 col-lg-4">
           <div class="card mb-5" style="width: 18rem">
@@ -188,7 +194,7 @@
     <!-- Contact Section -->
     <div class="container">
       <div class="row">
-        <div data-aos="fade-right" class="col-12 col-md-4 ml-5">
+        <div data-aos="fade-right" class="col-12 col-lg-4">
           <h1 id="contact-me">Contact Me</h1>
           <div class="social-media">
             <ul class="contact__list">
@@ -223,7 +229,7 @@
           </div>
         </div>
 
-        <div class="col-12 col-md-8 ml-5">
+        <div class="col-12 col-md-8">
           <form data-aos="fade-left">
             <div class="form-group">
               <label for="exampleInputEmail1">Email address</label>
