Adding IT Stems link when clicking on the picture

--- a/index.html
+++ b/index.html
@@ -149,7 +149,9 @@
               <div class="col-lg-4 col-md-4 col-sm-6">
                 <div class="single-brand-item d-table">
                   <div class="d-table-cell text-center">
-                    <img src="img/brands/itstems-logo-lg.jpg" alt="" />
+                    <a href="https://itstems.com/"
+                      ><img src="img/brands/itstems-logo-lg.jpg" alt=""
+                    /></a>
                   </div>
                 </div>
               </div>
