--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                   <span class="fa fa-phone"></span>
                 </div>
                 <div class="ml-15">
-                  <p>call us now</p>
+                  <p>call me now</p>
                   <h3>(+20) 106 807 9822</h3>
                 </div>
               </div>
@@ -187,7 +187,7 @@
             <div class="main_title">
               <h2>service offers</h2>
               <p>
-                Our comprehensive suite of services includes cutting-edge Web
+                My comprehensive suite of services includes cutting-edge Web
                 Developing, captivating UI/UX Design, visually stunning Web
                 Design, and strategic SEO Optimization.
               </p>
@@ -259,7 +259,6 @@
             <li class="active" data-filter="*">all</li>
             <li data-filter=".popular">popular</li>
             <li data-filter=".latest">latest</li>
-            <li data-filter=".following">following</li>
             <li data-filter=".upcoming">upcoming</li>
           </ul>
         </div>
@@ -271,19 +270,19 @@
                 <div class="single_portfolio">
                   <img
                     class="img-fluid w-100"
-                    src="img/portfolio/p1.jpg"
+                    src="img/portfolio/p1.PNG"
                     alt=""
                   />
                   <div class="overlay"></div>
-                  <a href="img/portfolio/p1.jpg" class="img-gal">
+                  <a href="img/portfolio/p1.PNG" class="img-gal">
                     <div class="icon">
                       <span class="lnr lnr-cross"></span>
                     </div>
                   </a>
                 </div>
                 <div class="short_info">
-                  <h4><a href="portfolio-details.html">minimal design</a></h4>
-                  <p>Animated, portfolio</p>
+                  <h4><a href="https://go-black.vercel.app/">GO</a></h4>
+                  <p>A Static Landing Page For Hosting Service</p>
                 </div>
               </div>
             </div>
@@ -292,19 +291,19 @@
                 <div class="single_portfolio">
                   <img
                     class="img-fluid w-100"
-                    src="img/portfolio/p2.jpg"
+                    src="img/portfolio/p2.png"
                     alt=""
                   />
                   <div class="overlay"></div>
-                  <a href="img/portfolio/p2.jpg" class="img-gal">
+                  <a href="img/portfolio/p2.png" class="img-gal">
                     <div class="icon">
                       <span class="lnr lnr-cross"></span>
                     </div>
                   </a>
                 </div>
                 <div class="short_info">
-                  <h4><a href="portfolio-details.html">Paint wall</a></h4>
-                  <p>Animated, portfolio</p>
+                  <h4><a href="#">FRIENDS</a></h4>
+                  <p>A Small E-Commerce Website</p>
                 </div>
               </div>
             </div>
@@ -313,145 +312,23 @@
                 <div class="single_portfolio">
                   <img
                     class="img-fluid w-100"
-                    src="img/portfolio/p3.jpg"
+                    src="img/portfolio/p3.PNG"
                     alt=""
                   />
                   <div class="overlay"></div>
-                  <a href="img/portfolio/p3.jpg" class="img-gal">
+                  <a href="img/portfolio/p3.PNG" class="img-gal">
                     <div class="icon">
                       <span class="lnr lnr-cross"></span>
                     </div>
                   </a>
                 </div>
                 <div class="short_info">
-                  <h4><a href="portfolio-details.html">female light</a></h4>
-                  <p>Animated, portfolio</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-6 all popular">
-              <div class="portfolio_box">
-                <div class="single_portfolio">
-                  <img
-                    class="img-fluid w-100"
-                    src="img/portfolio/p4.jpg"
-                    alt=""
-                  />
-                  <div class="overlay"></div>
-                  <a href="img/portfolio/p4.jpg" class="img-gal">
-                    <div class="icon">
-                      <span class="lnr lnr-cross"></span>
-                    </div>
-                  </a>
-                </div>
-                <div class="short_info">
-                  <h4><a href="portfolio-details.html">fourth air</a></h4>
-                  <p>Animated, portfolio</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-6 all following">
-              <div class="portfolio_box">
-                <div class="single_portfolio">
-                  <img
-                    class="img-fluid w-100"
-                    src="img/portfolio/p6.jpg"
-                    alt=""
-                  />
-                  <div class="overlay"></div>
-                  <a href="img/portfolio/p5.jpg" class="img-gal">
-                    <div class="icon">
-                      <span class="lnr lnr-cross"></span>
-                    </div>
-                  </a>
-                </div>
-                <div class="short_info">
-                  <h4><a href="portfolio-details.html">together sign</a></h4>
-                  <p>Animated, portfolio</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-6 all upcoming">
-              <div class="portfolio_box">
-                <div class="single_portfolio">
-                  <img
-                    class="img-fluid w-100"
-                    src="img/portfolio/p5.jpg"
-                    alt=""
-                  />
-                  <div class="overlay"></div>
-                  <a href="img/portfolio/p6.jpg" class="img-gal">
-                    <div class="icon">
-                      <span class="lnr lnr-cross"></span>
-                    </div>
-                  </a>
-                </div>
-                <div class="short_info">
-                  <h4><a href="portfolio-details.html">multiply fowl</a></h4>
-                  <p>Animated, portfolio</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-6 all upcoming following">
-              <div class="portfolio_box">
-                <div class="single_portfolio">
-                  <img
-                    class="img-fluid w-100"
-                    src="img/portfolio/p7.jpg"
-                    alt=""
-                  />
-                  <div class="overlay"></div>
-                  <a href="img/portfolio/p7.jpg" class="img-gal">
-                    <div class="icon">
-                      <span class="lnr lnr-cross"></span>
-                    </div>
-                  </a>
-                </div>
-                <div class="short_info">
-                  <h4><a href="portfolio-details.html">green heaven</a></h4>
-                  <p>Animated, portfolio</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-6 all following">
-              <div class="portfolio_box">
-                <div class="single_portfolio">
-                  <img
-                    class="img-fluid w-100"
-                    src="img/portfolio/p8.jpg"
-                    alt=""
-                  />
-                  <div class="overlay"></div>
-                  <a href="img/portfolio/p8.jpg" class="img-gal">
-                    <div class="icon">
-                      <span class="lnr lnr-cross"></span>
-                    </div>
-                  </a>
-                </div>
-                <div class="short_info">
-                  <h4>fly male</h4>
-                  <p>Animated, portfolio</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-6 all upcoming">
-              <div class="portfolio_box">
-                <div class="single_portfolio">
-                  <img
-                    class="img-fluid w-100"
-                    src="img/portfolio/p9.jpg"
-                    alt=""
-                  />
-                  <div class="overlay"></div>
-                  <a href="img/portfolio/p9.jpg" class="img-gal">
-                    <div class="icon">
-                      <span class="lnr lnr-cross"></span>
-                    </div>
-                  </a>
-                </div>
-                <div class="short_info">
-                  <h4><a href="portfolio-details.html">season face</a></h4>
-                  <p>Animated, portfolio</p>
+                  <h4><a href="https://arabfluent.com/">ARABFLUENT</a></h4>
+                  <p>
+                    A website for teaching the Arabic language to non-native
+                    speakers and connecting them with the necessary experienced
+                    teachers from all over the world.
+                  </p>
                 </div>
               </div>
             </div>
