--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                   <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="portfolio.html">Portfolio</a>
+                  <a class="nav-link" href="#portfolio">Portfolio</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="contact.html">Contact</a>
@@ -246,8 +246,8 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
-            <div class="main_title text-left">
-              <h2>
+            <div class="main_title text-center">
+              <h2 id="portfolio">
                 quality work <br />
                 Recently done project
               </h2>
@@ -413,10 +413,12 @@
                 <h4>Follow Me</h4>
               </div>
               <div class="footer_social">
-                <a href="#"><i class="fa fa-facebook"></i></a>
-                <a href="#"><i class="fa fa-twitter"></i></a>
-                <a href="#"><i class="fa fa-dribbble"></i></a>
-                <a href="#"><i class="fa fa-behance"></i></a>
+                <a href="https://www.linkedin.com/in/ziyad-batikh-b10624219/"
+                  ><i class="fa fa-linkedin"></i
+                ></a>
+                <a href="https://github.com/ZiyadBatikh"
+                  ><i class="fa fa-github"></i
+                ></a>
               </div>
             </div>
           </div>
@@ -430,7 +432,11 @@
             </script>
             All rights reserved | This template is made with
             <i class="fa fa-heart-o" aria-hidden="true"></i> by
-            <a href="https://colorlib.com" target="_blank">Colorlib</a>
+            <a
+              href="https://my-portfolio-delta-umber.vercel.app/"
+              target="_blank"
+              >Ziyad</a
+            >
             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
           </p>
         </div>
