New Changes in email name,linkedIn and GitHub

--- a/contact.html
+++ b/contact.html
@@ -104,8 +104,8 @@
               <div class="info_item">
                 <i class="lnr lnr-envelope"></i>
                 <h6>
-                  <a href="mailto:z.batikh111@gmail.com"
-                    >z.batikh111@gmail.com</a
+                  <a href="mailto:ziyadbatekh@gmail.com"
+                    >ziyadbatekh@gmail.com</a
                   >
                 </h6>
                 <p>Send me your query anytime!</p>
@@ -130,10 +130,10 @@
                 <h4>Follow Me</h4>
               </div>
               <div class="footer_social">
-                <a href="https://www.linkedin.com/in/ziyad-batikh-b10624219/"
+                <a href="https://www.linkedin.com/in/ziyad-batekh-b10624219/"
                   ><i class="fa fa-linkedin"></i
                 ></a>
-                <a href="https://github.com/ZiyadBatikh"
+                <a href="https://github.com/ZiyadBatekh"
                   ><i class="fa fa-github"></i
                 ></a>
               </div>
