--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <div class="d-flex align-items-center">
                   <a
                     class="primary_btn tr-bg"
-                    href="https://drive.google.com/file/d/1i14Qg2jIJxpsdx_x0tK_8YF6gGiHnf0j/view?usp=sharing"
+                    href="https://drive.google.com/file/d/1GlAZ5gvRWOgvvoQliOb2EUz32z3xHEZI/view?usp=sharing"
                     ><span>Get CV</span></a
                   >
                 </div>
@@ -117,20 +117,16 @@
                 myself
               </h2>
               <p>
-                As a dynamic Front-End Angular Developer, I excel in crafting
-                engaging web applications. Proficient in HTML, CSS, JavaScript,
-                TypeScript, Bootstrap, Angular, Git, and GitHub, I specialize in
-                developing responsive and user-friendly interfaces. Leveraging a
-                solid foundation in web technologies and a commitment to staying
-                updated with industry trends, I contribute to the creation of
-                seamless digital experiences that exceed client expectations. A
-                collaborative team player with a passion for problem-solving, I
-                am dedicated to delivering high-quality projects on time and
-                within scope.
+                Experienced Front End Developer with 1 year of expertise in
+                HTML/HTML5, CSS/CSS3, JavaScript, TypeScript, Bootstrap and
+                Chakra UI, proficient in modern frameworks like Angular and
+                React 18.Dedicated to creating user-friendly interfaces and
+                eager to contribute to a dynamic team environment while further
+                honing skills in web development.
               </p>
               <a
                 class="primary_btn"
-                href="https://drive.google.com/file/d/1i14Qg2jIJxpsdx_x0tK_8YF6gGiHnf0j/view"
+                href="https://drive.google.com/file/d/1GlAZ5gvRWOgvvoQliOb2EUz32z3xHEZI/view?usp=sharing"
                 ><span>Download CV</span></a
               >
             </div>
@@ -413,10 +409,10 @@
                 <h4>Follow Me</h4>
               </div>
               <div class="footer_social">
-                <a href="https://www.linkedin.com/in/ziyad-batikh-b10624219/"
+                <a href="https://www.linkedin.com/in/ziyad-batekh-b10624219/"
                   ><i class="fa fa-linkedin"></i
                 ></a>
-                <a href="https://github.com/ZiyadBatikh"
+                <a href="https://github.com/ZiyadBatekh"
                   ><i class="fa fa-github"></i
                 ></a>
               </div>
