--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <div class="col-lg-7">
               <div class="banner_content">
                 <h3 class="text-uppercase">Hell0</h3>
-                <h1 class="text-uppercase">I am Ziyad Batikh</h1>
+                <h1 class="text-uppercase">I am Ziyad Batekh</h1>
                 <h5 class="text-uppercase">Front End Developer</h5>
                 <div class="d-flex align-items-center">
                   <a
