Adding a testemonial quote image instead of images

--- a/index.html
+++ b/index.html
@@ -353,7 +353,10 @@
             <div class="testi_item">
               <div class="row">
                 <div class="col-lg-4">
-                  
+                  <img
+                    src="img/testimonials/t1.png"
+                    style="height: 100px; width: 100px"
+                  />
                 </div>
                 <div class="col-lg-8">
                   <div class="testi_text">
@@ -370,7 +373,10 @@
             <div class="testi_item">
               <div class="row">
                 <div class="col-lg-4">
-                  
+                  <img
+                    src="img/testimonials/t2.png"
+                    style="height: 100px; width: 100px"
+                  />
                 </div>
                 <div class="col-lg-8">
                   <div class="testi_text">
